# CNN-for-Ani

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
dataset/: metadata.csv
dataset/captcha-v1/: DATASET_CARD.md  LICENSE.md  SHA256SUMS  manifest.csv
docs/: README.md  skills.md  冷启动.md  冷启动结论.md  实现过程.md  最终方案.md  识别模型.md
examples/: predict_onnx.py
experiments/: README.md  results.csv
models/captcha-alpha1/: MODEL_CARD.md  SHA256SUMS  captcha.onnx  manifest.json  report.json
models/experimental/: README.md
models/experimental/position/: captcha.onnx  export.json  report.json  split.json
models/experimental/wide-position/: captcha.onnx  export.json  report.json  split.json
models/final/: MODEL_CARD.md  SHA256SUMS  captcha-final-eval.onnx  captcha.onnx  eval-report.json  manifest.json  production-report.json  release.json  split.json
scripts/: __init__.py  build_open_dataset.py
src/cnn_for_ani/: __init__.py  __main__.py  augmentation.py  dataset.py  error_analysis.py  evaluate_checkpoint.py  export_onnx.py  final_pipeline.py  final_training.py  labeling.py  losses.py  metrics.py  model.py  overfit.py  prediction.py  prepare_batch_split.py  preprocessing.py  temporal_holdout.py  train_ensemble.py  training.py  tuning_analysis.py
tests/: test_augmentation.py  test_dataset.py  test_error_analysis.py  test_final_pipeline.py  test_labeling.py  test_losses.py  test_metrics.py  test_model.py  test_preprocessing.py  test_release_scripts.py  test_training.py
