[project]
name = "cnn-for-ani"
version = "0.1.0"
description = "A compact multi-head CNN experiment for Animeko four-digit captchas."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "proffitteoy" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26,<3",
    "onnx>=1.22.0",
    "onnxruntime>=1.27.0",
    "onnxscript>=0.7.1",
    "pillow>=10,<13",
    "torch>=2.3,<3",
]

[project.urls]
Homepage = "https://github.com/proffitteoy/CNN-for-Ani"
Repository = "https://github.com/proffitteoy/CNN-for-Ani"
Issues = "https://github.com/proffitteoy/CNN-for-Ani/issues"

[dependency-groups]
dev = [
    "pytest>=8,<10",
    "ruff>=0.11,<1",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cnn_for_ani"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
